Revert "API:1，ip包外置，减少打包体积；2，配置外置数据包到相对路径到文件并作说明"
This reverts commit a51634f4ea8fe08b3e0f76636fb1f9f8b1f54269.

--- a/blog-api/src/main/resources/application-prd.properties.template
+++ b/blog-api/src/main/resources/application-prd.properties.template
@@ -90,18 +90,6 @@ upload.upyun.domain=https://cdn.caixiaohu.com
 
 # 百度内容审核配置
 baidu.content.enabled=true
-baidu.content.api-key=your_api_key
-baidu.content.secret-key=your_secret_key
-# 是否允许疑似内容通过，默认false（不允许通过）
+baidu.content.api-key=${BAIDU_API_KEY}
+baidu.content.secret-key=${BAIDU_SECRET_KEY}
 baidu.content.allow-suspicious=false
-
-# 文件上传大小限制
-spring.servlet.multipart.max-file-size=20MB
-spring.servlet.multipart.max-request-size=20MB
-
-# GeoIP数据库路径配置（必须配置）
-# 系统将从此路径加载GeoIP数据库文件，用于IP地址解析
-# 可以使用绝对路径：D:/data/GeoLite2-City.mmdb（Windows）或 /opt/blog/data/GeoLite2-City.mmdb（Linux）
-# 也可以使用相对路径：./geoip/GeoLite2-City.mmdb（相对于应用运行目录）
-# 注意：必须确保该文件存在且应用有权限访问，否则应用将无法启动
-blog.geoip.db.path=./geoip/GeoLite2-City.mmdb
